syntax = "proto3";

// a recursive complex type can cause stack overflow in the frontend when inferring the schema

package recursive_complex;

message AnyValue {
    oneof value {
        string string_value = 1;
        int32 int_value = 2;
        double double_value = 3;
        bool bool_value = 4;
        ArrayValue array_value = 5;
    }
}

message ArrayValue {
    AnyValue value1 = 1;
    AnyValue value2 = 2;
    ArrayValue array_value = 3;
}
